--- a/src/app/shared/components/base-scene/base-scene.html
+++ b/src/app/shared/components/base-scene/base-scene.html
@@ -15,11 +15,13 @@
     position="0 0 0"
     [attr.visible]="visible()"
     calibrated-anchor="storageKey: wall-calibration"
+    desktop-interaction-manager
   >
     <!-- Wall GLTF Model - uses direct URL loading like the working playground -->
     @if (wallModelUrl()) {
       <a-entity 
         id="wall-container"
+        class="wall interactable"
         [attr.gltf-model]="'url(' + wallModelUrl() + ')'"
         [attr.wall-opacity]="'opacity: ' + settingsStore.wallOpacity()"
         position="0 0 0"
@@ -48,10 +50,7 @@
           class="hold interactable"
           [attr.data-hold-id]="hold.id"
           [attr.position]="hold.x + ' ' + hold.y + ' ' + hold.z"
-          radius="0.04"
-          [attr.material]="getHoldMaterial(hold.id)"
-          (mouseenter)="onHoldHover(hold.id)"
-          (mouseleave)="onHoldHoverEnd(hold.id)">
+          radius="0.04">
         </a-sphere>
       }
     </a-entity>
@@ -64,7 +63,7 @@
   <a-entity 
     id="mouseCursor" 
     cursor="rayOrigin: mouse; fuse: false" 
-    raycaster="objects: .interactable, .hold; far: 100">
+    raycaster="objects: .interactable, .hold, .wall; far: 100">
   </a-entity>
 
   <!-- Extension point: environment (sky, lights, etc) -->
