--- a/src/app/vr/playgrounds/hold-loader/hold-loader.component.html
+++ b/src/app/vr/playgrounds/hold-loader/hold-loader.component.html
@@ -17,9 +17,7 @@
       class="clickable hold"
       [attr.position]="hold.x + ' ' + hold.y + ' ' + hold.z"
       radius="0.05"
-      [attr.color]="getHoldColor(hold.id)"
-      opacity="0.8"
-      (click)="onHoldClick(hold.id)">
+      opacity="0.8">
     </a-sphere>
   }
 
