--- a/src/app/shared/components/base-scene/base-scene.html
+++ b/src/app/shared/components/base-scene/base-scene.html
@@ -41,6 +41,7 @@
         <a-sphere
           class="hold interactable"
           [attr.data-hold-id]="hold.id"
+          [attr.selected-hold]="'holdId: ' + hold.id"
           [attr.position]="hold.x + ' ' + hold.y + ' ' + hold.z"
           radius="0.04"
           animation__grow="property: scale; to: 1.4 1.4 1.4; dur: 150; easing: easeOutQuad; startEvents: mouseenter"
